--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.7.1",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.2"
   }
