--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^1.15.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -14,6 +15,7 @@
     "mongoose": "^5.7.1",
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^1.19.2"
   }
 }
