--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "randomstring": "^1.1.5"
   }
 }
